--- a/.github/workflows/Kernel by ower scripts.yml
+++ b/.github/workflows/Kernel by ower scripts.yml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v4
 
     - name: Get OpenWrt firmware
       id: build
